[tool.poetry]
name = "pyquest"
version = "0.1.0"
description = ""
authors = ["v3code <vitalik.w555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
returns = "^0.23.0"
pyrsistent = "^0.20.0"


[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
